--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
+                android:background="@color/white"
               android:orientation="vertical">
 
     <EditText
@@ -11,7 +12,7 @@
             android:layout_height="100dp"
             android:background="@color/white"
             android:gravity="right|bottom"
-            android:textSize="20sp"/>
+            android:textSize="40sp"/>
 
     <TextView
             android:id="@+id/tv_calculator_result"
@@ -48,7 +49,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="C"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_del"
@@ -58,7 +59,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="Del"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_plus"
@@ -68,7 +69,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="＋"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_multiply"
@@ -78,7 +79,7 @@
                     android:background="@drawable/whitetogray"
                     android:gravity="center"
                     android:text="×"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
         </LinearLayout>
 
@@ -97,7 +98,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="7"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
             <Button
                     android:id="@+id/btn_calculator_8"
                     android:layout_width="0dp"
@@ -106,7 +107,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="8"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_9"
@@ -116,7 +117,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="9"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_subtract"
@@ -126,7 +127,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="－"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
         </LinearLayout>
 
         <LinearLayout
@@ -144,7 +145,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="4"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_5"
@@ -154,7 +155,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="5"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_6"
@@ -164,7 +165,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="6"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
             <Button
                     android:id="@+id/btn_calculator_divide"
@@ -174,7 +175,7 @@
                     android:gravity="center"
                     android:background="@drawable/whitetogray"
                     android:text="÷"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
         </LinearLayout>
 
@@ -205,7 +206,7 @@
                             android:gravity="center"
                             android:background="@drawable/whitetogray"
                             android:text="1"
-                            android:textSize="20sp"/>
+                            android:textSize="@dimen/calculatorButtonTextSize"/>
 
                     <Button
                             android:id="@+id/btn_calculator_2"
@@ -215,7 +216,7 @@
                             android:gravity="center"
                             android:background="@drawable/whitetogray"
                             android:text="2"
-                            android:textSize="20sp"/>
+                            android:textSize="@dimen/calculatorButtonTextSize"/>
 
                     <Button
                             android:id="@+id/btn_calculator_3"
@@ -226,7 +227,7 @@
                             android:background="@drawable/whitetogray"
 
                             android:text="3"
-                            android:textSize="20sp"/>
+                            android:textSize="@dimen/calculatorButtonTextSize"/>
 
                 </LinearLayout>
 
@@ -245,7 +246,7 @@
                             android:background="@drawable/whitetogray"
                             android:gravity="center"
                             android:text="0"
-                            android:textSize="20sp"/>
+                            android:textSize="@dimen/calculatorButtonTextSize"/>
 
                     <Button
                             android:id="@+id/btn_calculator_point"
@@ -256,7 +257,7 @@
                             android:gravity="center"
                             android:text="."
                             android:textStyle="bold"
-                            android:textSize="20sp"/>
+                            android:textSize="@dimen/calculatorButtonTextSize"/>
 
                 </LinearLayout>
 
@@ -272,7 +273,7 @@
                     android:gravity="center"
                     android:text="="
                     android:textColor="#fff"
-                    android:textSize="20sp"/>
+                    android:textSize="@dimen/calculatorButtonTextSize"/>
 
 
         </LinearLayout>
