--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="Image_width">65dp</dimen>
     <dimen name="Button_height">70dp</dimen>
     <dimen name="Button_textSize">20dp</dimen>
+    <dimen name="calculatorButtonTextSize">30sp</dimen>
 </resources>
